--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>마시그래이</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+    integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
@@ -24,6 +28,25 @@
 </head>
 
 <body>
+    <div class="modal">
+    <div class="modal-wrap">
+      <button class="modal-close"><i class="fas fa-times"></i></button>
+      <h2>마시그래이</h2>
+      <p>
+        이 사이트는 스터디용으로 제작되었으며 리소스는 원저작자에게 있습니다. 
+        <br>
+        해당 사이트 관련 문제 사항이 있으시면 연락해주시면 삭제하겠습니다.
+        <br>
+        본 사이트는 Chrome 에 최적화되어 있습니다.
+      </p>
+      <ul>
+        <li><a href="https://github.com/dkssudgktpd" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="mailto:anstnqls554@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
+        <li><a href="https://open.kakao.com/o/szrNSmEe" target="_blank"><i class="fas fa-comments"></i></a></li>
+      </ul>
+    </div>
+  </div>
+
   <!-- 위로가기 -->
   <button class="gotop"></button>
 
